--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,10 @@ button:active {
     opacity: 0.8; /* Opacidade ao clicar */
 }
 
+button[disabled] {
+    opacity: 0.7;
+}
+
 .login {
     background: white;
     border: none; /* Não exibe a borda */
