--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,38 +12,15 @@ form {
 
 input, button {
     padding: 10px; /* Espaço inteiror */
-    margin-bottom: 10px; /* Espaço exterior do bottom */
     width: -webkit-fill-available ; /* Preenche o espaço disponível */
 }
 
 button {
     cursor: pointer; /* Mostra o cursor da seta */
     width: -webkit-fill-available ; /* Preenche o espaço disponível */
+    margin-bottom: 10px;
 }
 
-button:active {
-    opacity: 0.8; /* Opacidade ao clicar */
-}
-
-button[disabled] {
-    opacity: 0.7;
-}
-
-.login {
-    background: white;
-    border: none; /* Não exibe a borda */
-    color: rgb(45, 221, 111);
-
-}
-
-.register {
-    background: transparent;
-    color: white;
-    border: 1px solid white; /* Exibe a borda */
-}
-
-.recsenha {
-    background: transparent;
-    border: none;
-    color: white;
+.form-field {
+    margin-bottom: 10px;
 }
