--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,3 +1,15 @@
+body{
+    margin: 0;
+
+}
+
+.centralize {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
 .login {
     background: white;
     border: none; /* Não exibe a borda */
@@ -29,4 +41,15 @@ button:active {
 
 button[disabled] {
     opacity: 0.7;
+}
+
+.loading {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.loading label {
+    font-size: 24px;
 }
