--- a/static/css/global.css
+++ b/static/css/global.css
@@ -3,6 +3,15 @@ body{
 
 }
 
+.form-field {
+    margin-bottom: 10px;
+}
+
+input, button {
+    padding: 10px; /* Espaço inteiror */
+    width: -webkit-fill-available ; /* Preenche o espaço disponível */
+}
+
 .centralize {
     display: flex;
     align-items: center;
